# ccd

./: .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.md  misc.ipynb  pyproject.toml  requirements.txt  yes  yes.pub
web/: .dockerignore  .env.example  .gitignore  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
web/backend/: CLAUDE.md  Dockerfile  Dockerfile.base  alembic.ini  pyproject.toml  start-worker.bat  start.bat
web/backend/app/: config.py  db.py  deps.py  main.py  worker.py
web/backend/app/auth/: models.py  router.py  schemas.py  security.py  service.py
web/backend/app/busca/: router.py  schemas.py  service.py
web/backend/app/ccd/: router.py  schemas.py  service.py
web/backend/app/ccd/alertas/: router.py  schemas.py  service.py
web/backend/app/ccd/antecedentes/: __init__.py  router.py  schemas.py  service.py  tasks.py
web/backend/app/ccd/antecedentes/sql/: candidatos.sql  (+2 more)
web/backend/app/ccd/desconto_folha/: __init__.py  router.py  schemas.py  service.py  tasks.py
web/backend/app/cgad/: tasks.py
web/backend/app/cgad/dashboards/: router.py  schemas.py  service.py
web/backend/app/cgad/dataset_corrections/: __init__.py  dataset.py  paths.py  router.py  schemas.py  service.py  store.py
web/backend/app/cgad/etl/: router.py  schemas.py
web/backend/app/cgad/review/: router.py  schemas.py  service.py
web/backend/app/debitos/: router.py  schemas.py  service.py
web/backend/app/desconto_folha/: fases.py  router.py  schemas.py  service.py
web/backend/app/jobs/: models.py  router.py  schemas.py  service.py  tasks.py
web/backend/app/lancamentos/: router.py  schemas.py  service.py
web/backend/app/matches/: router.py  schemas.py  service.py
web/backend/app/migrations/: env.py
web/backend/app/migrations/versions/: 0001_baseline_auth.py  0002_create_frap_jobs.py  0003_desconto_folha_extensoes.py  0004_orgao_notificado.py  0005_notificacao_desconto_folha.py  0006_metrica_pessoa.py  0007_valor_debitos_notificados.py  0008_login_usuario.py  0009_metrica_atribuidos.py  0010_lancamento_orgao.py  0011_metrica_totais.py  0012_status_match_exato_por_ordem.py  0013_lancamento_seq_bb.py  0014_repoint_user_fks_to_usuarios.py  0015_email_opcional_deve_trocar_senha.py
web/backend/app/scripts/: create_user.py
web/backend/app/usuarios/: router.py  schemas.py  service.py
web/backend/tests/: conftest.py  test_auth_router.py  test_auth_service.py  test_debitos.py  test_jobs.py  test_lancamentos.py  test_matches_ob.py  test_security.py  test_usuarios.py
web/deploy/: Caddyfile  deploy_remote.py
web/frontend/: CLAUDE.md  Dockerfile  package.json  pnpm-lock.yaml  start.bat  tsconfig.tsbuildinfo
web/frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/frontend/src/app/(app)/: layout.tsx
web/frontend/src/components/app/: lancamento-detail-sheet.tsx  top-bar.tsx
web/frontend/src/components/dashboards/: kpi-card.tsx  period-picker.tsx
web/frontend/src/components/dataset-corrections/: confidence-filter.tsx  decision-bar.tsx  document-canvas.tsx  fallback-window.tsx  range-adjuster.tsx
web/frontend/src/components/review/: claim-banner.tsx  obrigacao-form.tsx  recomendacao-form.tsx  reject-dialog.tsx  review-list.tsx  span-editor.tsx
web/frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  select-native.tsx  sheet.tsx  table.tsx  tabs.tsx
web/frontend/src/hooks/: use-busca.ts  use-ccd-alertas.ts  use-ccd-antecedentes.ts  use-ccd-desconto-folha.ts  use-ccd-job.ts  use-ccd-processos.ts  use-current-user.ts  use-dashboards.ts  use-dataset-corrections.ts  use-desconto-folha.ts  use-etl.ts  use-fases.ts  use-jobs.ts  use-lancamento.ts  use-lancamentos.ts  use-matches.ts  use-min-confidence.ts  use-reviews.ts  use-usuarios.ts
web/frontend/src/lib/: api-client.ts  auth-api.ts  auth.ts  dashboards-api.ts  dataset-corrections-api.ts  error-messages.ts  etl-api.ts  format.ts  marcador-color.ts  query-client.ts  reviews-api.ts
web/frontend/src/lib/api/: busca.ts  ccd-alertas.ts  ccd-antecedentes.ts  ccd-desconto-folha.ts  ccd-jobs.ts  ccd.ts  desconto-folha.ts  fases.ts  jobs.ts  lancamentos.ts  matches.ts  usuarios.ts
web/frontend/src/schemas/: auth.ts  busca.ts  ccd-alertas.ts  ccd-antecedentes.ts  ccd-desconto-folha.ts  ccd.ts  dashboards.ts  dataset-corrections.ts  desconto-folha.ts  etl.ts  fases.ts  job.ts  lancamento.ts  match.ts  review.ts  usuario.ts
web/tools/cgad/: pyproject.toml
web/tools/cgad/cgad/: dataset.py  fewshot.py  models.py  ner_metrics.py  prompt.py  prompt_engineering.py  schema.py  utils.py
web/tools/cgad/cgad/etl/: __init__.py  pipeline.py  staging.py
web/tools/cgad/sql/: decisions_base.sql  decisions_full_text.sql  obligations_nonprocessed.sql  recommendations_nonprocessed.sql
web/tools/frap/: pyproject.toml
web/tools/frap/frap/: cli.py  config.py  llm.py
web/tools/frap/frap/ccd/: pdf.py  scan_notificacoes.py
web/tools/frap/frap/extratos/: api_bb.py  classifica.py  extrator_pessoa.py  ingest.py  parser.py  parser_pdf.py  schemas.py
web/tools/frap/frap/matching/: descontofolha.py  guia.py  inferencia_orgao.py  inferencia_orgao_llm.py  ob.py  pessoa.py  relatorio.py
web/tools/frap/frap/persistencia/: __init__.py  descontofolha.py  descontos_extras.py  extrato.py  inferencia_orgaos_lancamento.py  lookups.py  matches.py  metrica_pessoa.py  planilha_monitoramento.py
web/tools/frap/frap/processo/: repos.py
web/tools/frap/frap/siaipessoal/: __init__.py  repos.py
web/tools/frap/frap/sigef/: repos.py  repos_oracle.py
(+591 files in other folders)
