[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ccd"
version = "0.1.0"
description = "Tooling for the Coordenadoria de Controle de Decisões (TCE/RN)"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "pypdf",
    "pymssql",
    "SQLAlchemy",
    "python-dotenv",
    "docxtpl",
    "python-docx",
    "openpyxl",
    "pywin32; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pandas-stubs",
]
notebooks = [
    "langchain-openai",
    "langchain",
]

[tool.setuptools.packages.find]
include = ["ccd*"]

[tool.setuptools.package-data]
ccd = ["sql/*.sql"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "*.ipynb",
    "scripts/consultas",
    "scripts/erros",
    "scripts/json_antecedentes",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter, avoid noisy notebook-style strings

[tool.ruff.lint.per-file-ignores]
# script em células de notebook (imports por seção, expressões de exibição)
"scripts/analise/planilha_nereu.py" = ["E402", "E702", "I001", "B018"]

[tool.mypy]
python_version = "3.12"
files = ["ccd"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
