[project]
name = "cgad"
version = "0.1.0"
description = "Biblioteca de domínio CGAD — pipeline de extração de obrigações/recomendações de acórdãos (NER + LLM), schemas e ORMs."
requires-python = ">=3.12,<3.13"
dependencies = [
    "sqlalchemy>=2.0",
    "pyodbc>=5.1",
    "pydantic>=2.11",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "rapidfuzz>=3.13",
    "pandas>=2.2",
    "langchain-core>=0.3",
]

[project.optional-dependencies]
llm = [
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langchain-community>=0.3",
    "openai>=1.91",
    "numpy>=1.26",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cgad*"]
